[package]
name = "kaffee"
version = "0.1.0-rc.1"
edition = "2021"
description = "Small 2D framework"
license = "Apache-2.0"
repository = "https://github.com/chickenbreeder/kaffee"
documentation = "https://docs.rs/kaffee"

[dependencies]
winit = "0.27.2"
wgpu = { version = "0.13.1", features = ["glsl"] }
naga = "0.9"
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.21", features = ["bytemuck"] }

[dev-dependencies]
pollster = "0.2.5"
