[package]
name = "kaffee"
version = "0.2.0"
edition = "2021"
description = "Small 2D framework"
license = "Apache-2.0"
repository = "https://github.com/chickenbreeder/kaffee"
documentation = "https://docs.rs/kaffee"
keywords = [ "2d", "gamedev", "wgpu", "graphics" ]
exclude = [
    "**/*.png"
]

[dependencies]
winit = "0.28.1"
wgpu = { version = "0.14", features = ["glsl"] }
naga = "0.10"
bytemuck = { version = "1.12.2", features = ["derive"] }
glam = { version = "0.22", features = ["bytemuck"] }
log = "0.4"
env_logger = "0.9"
image = "0.24"

[dev-dependencies]
pollster = "0.2.5"
