[package]
name = "kaffee"
version = "0.3.0-rc.1"
edition = "2021"
description = "Small 2D framework"
license = "Apache-2.0"
repository = "https://github.com/chickenbreeder/kaffee"
documentation = "https://docs.rs/kaffee"
keywords = [ "2d", "gamedev", "wgpu", "graphics" ]
exclude = [
    "**/*.png"
]

[dependencies]
winit = "0.28.6"
wgpu = { version = "0.16.1", features = ["glsl"] }
naga = "0.12.2"
bytemuck = { version = "1.13.1", features = ["derive"] }
glam = { version = "0.24", features = ["bytemuck"] }
log = "0.4"
env_logger = "0.10"
image = { version = "0.24", default-features = false, features = ["png"] }

[dev-dependencies]
pollster = "0.3.0"
